@@ -2469,6 +2469,13 @@ command to generate the output files.
     <_comment>JPEG-2000 image</_comment>
     <glob pattern="*.jp2"/>
   </mime-type>
+  <mime-type type="image/x-dds">
+    <_comment>DirectDraw surface</_comment>
+    <magic priority="50">
+      <match value="DDS" type="string" offset="0"/>
+    </magic>
+    <glob pattern="*.dds"/>
+  </mime-type>
   <mime-type type="image/x-pict">
     <_comment>Macintosh Quickdraw/PICT drawing</_comment>
     <glob pattern="*.pict"/>
