@@ -1,5 +1,10 @@
 2007-03-08  Christian Neumair  <chris@gnome-de.org>
 
+	* freedesktop.org.xml.in: add DirectDraw surface type (#10083).
+	Thanks to Pino Toscano <toscano.pino@tiscali.it>.
+
+2007-03-08  Christian Neumair  <chris@gnome-de.org>
+
 	* freedesktop.org.xml.in: add pattern and description for KSysV init
 	type (#10040). Thanks to Pino Toscano <toscano.pino@tiscali.it>.
 
